--- a/api-leads/docker-compose.yml
+++ b/api-leads/docker-compose.yml
@@ -4,5 +4,10 @@ services:
     image: bi.etl.xiti.leads:1.0
     container_name: bi.etl.xiti.leads.container
     build: .
+    networks:
+      - regress
     ports:
       - "3000:3000"
+networks:
+  regress:
+    external: true
