--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 dist: xenial
 language: python
-
-python:
-  - "3.7"
+sudo: required
+dist: xenial
+python: "3.7"
 
 # This build should not be triggered by tags
 if: tags IS blank
 
-matrix:
-  include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
 
 # Anything in install that returns a nonzero exit code will
 # flunk the build and immediately stop. It's sorta like having
