--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
-dist: xenial
 language: python
-sudo: required
-dist: xenial
-python: "3.7"
+matrix:
+  include:
+    - python: 3.7-dev
+      dist: xenial
+      sudo: true
 
 # This build should not be triggered by tags
 if: tags IS blank
@@ -16,8 +17,11 @@ install:
   # Installing dependencies
   - pip install -r api_leads/resources/requirements.txt
   # Export the current branch according to travis (including pr builds) 
-  - export BUILD_BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
 
+before_script:
+  - export BUILD_BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+  - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST, BUILD_BRANCH=$BUILD_BRANCH"
+  
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
 script:
