[feat/add_travis] Added makefile and scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,6 @@ if: tags IS blank
 # Anything in install that returns a nonzero exit code will
 # flunk the build and immediately stop. It's sorta like having
 # set -e enabled in bash.
-install:
-  # run the initial setup
-  # Installing dependencies
-  - pip install -r ./api-leads/resources/requirements.txt
-  # Export the current branch according to travis (including pr builds) 
 
 before_script:
   - export BUILD_BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
@@ -25,8 +20,7 @@ before_script:
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
 script:
-        - docker build -f api_leads/Dockerfile -t containers.mpi-internal.com/yapo/data_postgres:${BUILD_BRANCH}
-
+  - make -C api-leads docker-build
 after_failure:
   - reports-publisher
 
@@ -37,6 +31,6 @@ deploy:
   - provider: script
     script: 
       - container_cache login --username "${ARTIFACTORY_USER}" --password "${ARTIFACTORY_PWD}" containers.mpi-internal.com/yapo 
-      - container_cache push containers.mpi-internal.com/yapo/data_postgres:${BUILD_BRANCH}
+      - make -C api-leads docker-publish
     on:
       all_branches: true
