--- a/api-leads/docker-compose.yml
+++ b/api-leads/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  app:
+  api_leads:
     image: bi.etl.xiti.leads:1.0
     container_name: bi.etl.xiti.leads.container
     build: .
