--- a/api-leads/Dockerfile
+++ b/api-leads/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.7-slim
 
 WORKDIR /work/
 
+COPY resources/requirements.txt resources/requirements
 COPY . .
 RUN pip install -r resources/requirements.txt
 ENTRYPOINT ["python", "src/main.py"]
