--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ if: tags IS blank
 before_script:
   - export BUILD_BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
   - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST, BUILD_BRANCH=$BUILD_BRANCH"
+  - make -C api-leads install
   
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
