[feat/rundeck-deploy] Added files for rundeck deploy

--- a/api-leads/Dockerfile
+++ b/api-leads/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.7-slim
 
 WORKDIR /work/
 
-COPY resources/requirements.txt resources/requirements
-COPY . .
+COPY resources/requirements.txt resources/requirements.txt
+COPY src src
+COPY scripts scripts
 RUN pip install -r resources/requirements.txt
-ENTRYPOINT ["python", "src/main.py"]
+ENTRYPOINT ["./scripts/run_api_leads.sh"]
