[feat/rundeck-deploy] WIP deploy rundeck job

--- a/api-leads/deploy/api_leads.yaml
+++ b/api-leads/deploy/api_leads.yaml
@@ -1,7 +1,7 @@
 - defaultTab: nodes
-  description: ''
+  description: "Fetch the leads from xiti through an API"
   executionEnabled: true
-  group: LEADS
+  group: TEST
   loglevel: INFO
   name: api_leads
   nodeFilterEditable: false
@@ -11,7 +11,7 @@
       keepgoing: false
       rankOrder: ascending
       successOnEmptyNodeFilter: false
-      threadcount: '1'
+      threadcount: "1"
     filter: dockerhost
   nodesSelectedByDefault: true
   scheduleEnabled: true
