[feat/rundeck-deploy] Added hidden property to options

--- a/api-leads/deploy/api_leads.yaml
+++ b/api-leads/deploy/api_leads.yaml
@@ -7,10 +7,12 @@
   nodeFilterEditable: false
   options:
     - name: database
+      hidden: true
       secure: true
       storagePath: keys/bnbiuser
       valueExposed: true
     - name: xiti
+      hidden: true
       secure: true
       storagePath: keys/xiti_auth
       valueExposed: true
