--- a/.travis.yml
+++ b/.travis.yml
@@ -16,17 +16,15 @@ if: tags IS blank
 before_script:
   - export BUILD_BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
   - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST, BUILD_BRANCH=$BUILD_BRANCH"
-  - make -C api-leads install
+  - bash scripts/install-dependencies.sh
   
 # script always run to completion (set +e). All of these code checks are must haves
-# in a modern Go project.
+# in a modern python project.
 script:
-  - make -C api-leads docker-build
-  - make -C api-leads check-style
+  - bash scripts/build-module.sh
 after_failure:
   - reports-publisher
 
 after_success:
   - reports-publisher
-  - make -C api-leads docker-publish
-  - make -C api-leads rundeck-deploy
+  - bash scripts/publish-module.sh
