--- a/aggregated-traffic-metrics/deploy/rundeck.yaml
+++ b/aggregated-traffic-metrics/deploy/rundeck.yaml
@@ -27,26 +27,25 @@
     onfailure:
       email:
         recipients: data_team@adevinta.com
-        subject: ${job.execid} ${execution.status} ${job.name}
-    onstart:
+        subject: ${job.execid} ${execution.status} ${job.name} - Fallo definitivo
+    onretryablefailure:
       email:
         recipients: data_team@adevinta.com
-        subject: ${job.execid} ${execution.status} ${job.name}
-    onsuccess:
-      email:
-        recipients: data_team@adevinta.com
-        subject: ${job.execid} ${execution.status} ${job.name}
+        subject: ${job.execid} ${execution.status} ${job.name} - Fallo por reintento
   notifyAvgDurationThreshold: null
+  scheduleEnabled: true
   schedule:
     month: '*'
     time:
-      hour: '09'
+      hour: '01'
       minute: '0'
       seconds: '0'
     weekday:
       day: '*'
     year: '*'
-  scheduleEnabled: true
+  retry:
+    retry: 3
+    delay: 20m
   sequence:
     commands:
     - script: |-
