--- a/incremental-buyers/deploy/rundeck-dev.yaml
+++ b/incremental-buyers/deploy/rundeck-dev.yaml
@@ -29,7 +29,7 @@
               -v /home/bnbiuser/secrets/dw_db:/app/dw-secret \
               -e APP_DW_SECRET=/app/dw-secret \
               containers.mpi-internal.com/yapo/incremental-buyers:feat_incremental-buyers \
-              -date_from="2020-05-10"
+              -date_from="2020-05-10" \
               -date_to="2020-05-10"
     keepgoing: false
     strategy: node-first
