--- a/incremental-buyers/deploy/rundeck-dev.yaml
+++ b/incremental-buyers/deploy/rundeck-dev.yaml
@@ -8,7 +8,7 @@
   executionEnabled: true
   group: CORE
   loglevel: DEBUG
-  name: Core - Buyers - User buyers and sellers
+  name: Core - User buyers and sellers
   nodeFilterEditable: false
   nodefilters:
     dispatch:
@@ -28,9 +28,7 @@
         sudo docker run --rm --net=host \
               -v /home/bnbiuser/secrets/dw_db:/app/dw-secret \
               -e APP_DW_SECRET=/app/dw-secret \
-              containers.mpi-internal.com/yapo/incremental-buyers:feat_incremental-buyers \
-              -date_from="2020-05-10" \
-              -date_to="2020-05-10"
+              containers.mpi-internal.com/yapo/incremental-buyers:feat_incremental-buyers
     keepgoing: false
     strategy: node-first
   timeZone: America/Santiago
