Actualización de correos.

--- a/aggregated-traffic-metrics/deploy/rundeck.yaml
+++ b/aggregated-traffic-metrics/deploy/rundeck.yaml
@@ -26,11 +26,11 @@
   notification:
     onfailure:
       email:
-        recipients: data_team@adevinta.com
+        recipients: gp_data_analytics@yapo.cl
         subject: ${job.execid} ${execution.status} ${job.name} - Fallo definitivo
     onretryablefailure:
       email:
-        recipients: data_team@adevinta.com
+        recipients: gp_data_analytics@yapo.cl
         subject: ${job.execid} ${execution.status} ${job.name} - Fallo por reintento
   notifyAvgDurationThreshold: null
   scheduleEnabled: true
