[feat/nps-sender]: changing db con

--- a/nps-sender/deploy/rundeck.yaml
+++ b/nps-sender/deploy/rundeck.yaml
@@ -2,11 +2,11 @@
   description: |-
     Etl that reads sellers that ended an ad so an survey would be send to their emails \
     https://github.mpi-internal.com/Yapo/data-traffic \
-    sudo docker run --rm -v /home/bnbiuser/secrets/blocket_db:/app/db-blocket \
-              -v /home/bnbiuser/secrets/zendesk_auth:/app/survey \
-              -e APP_BLOCKET_SECRET=/app/db-blocket \
-              -e APP_SURVEY_SECRET=/app/survey \
-              containers.mpi-internal.com/yapo/nps-sender:latest
+    sudo docker run --rm -v /home/bnbiuser/secrets/dw_db:/app/db-secret \
+            -v /home/bnbiuser/secrets/zendesk_auth:/app/survey \
+            -e APP_DB_SECRET=/app/db-secret \
+            -e APP_SURVEY_SECRET=/app/survey \
+            containers.mpi-internal.com/yapo/nps-sender:latest
   executionEnabled: true
   group: DOCKER/TRAFFIC
   loglevel: DEBUG
@@ -47,9 +47,9 @@
     commands:
     - script: |-
         sudo docker pull containers.mpi-internal.com/yapo/nps-sender:latest
-        sudo docker run --rm -v /home/bnbiuser/secrets/blocket_db:/app/db-blocket \
+        sudo docker run --rm -v /home/bnbiuser/secrets/dw_db:/app/db-secret \
             -v /home/bnbiuser/secrets/zendesk_auth:/app/survey \
-            -e APP_BLOCKET_SECRET=/app/db-blocket \
+            -e APP_DB_SECRET=/app/db-secret \
             -e APP_SURVEY_SECRET=/app/survey \
             containers.mpi-internal.com/yapo/nps-sender:latest
     keepgoing: false
